<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:layout_width="fill_parent"
        android:layout_height="3.0dip"
        layout="@layout/layout_de_sombra"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TableLayout
            android:background="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_codigo_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo"
                    android:textAlignment="textStart"
                    android:layout_weight="1.0"/>
                <TextView
                    android:id="@+id/tv_codigo_colector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_nombre_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:layout_weight="1.0"/>
                <TextView
                    android:id="@+id/tv_nombre_colector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:layout_weight="1.0"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_apellido_texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    android:layout_weight="1.0"/>
                <TextView
                    android:id="@+id/tv_apellido_colector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    android:layout_weight="1.0"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="3.0dp"
        layout="@layout/layout_de_sombra"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="0.0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2.0dp">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="right"
                    android:text="Cantidad"
                    tools:textAlignment="viewStart" />
                <TextView
                    android:id="@+id/denominacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Billetes"
                    android:layout_weight="1.0"/>
                <TextView
                    android:id="@+id/sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sub Total"
                    android:layout_weight="1.0"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cant_1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/billetes_de_mil"
                    android:inputType="numberSigned"
                    tools:textAlignment="viewStart"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/et_billetes_1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 1,000.00"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/tv_subtotal_1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cant_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/billetes_de_quinientos"
                    android:inputType="numberSigned"
                    android:layout_weight="1.0"
                    tools:textAlignment="viewStart"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/et_billetes_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 500.00"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/tv_subtotal_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cant_200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/billetes_de_doscientos"
                    android:inputType="numberSigned"
                    android:layout_weight="1.0"
                    tools:textAlignment="viewStart"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/et_billetes_200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 200.00"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/tv_subtotal_200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cant_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/billetes_de_cien"
                    android:inputType="numberSigned"
                    android:layout_weight="1.0"
                    tools:textAlignment="viewStart"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/et_billetes_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 100.00"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/tv_subtotal_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_cant_50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/billetes_de_cincuenta"
                    android:inputType="numberSigned"
                    android:layout_weight="1.0"
                    tools:textAlignment="viewStart"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/et_billetes_50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 50.00"
                    android:layout_weight="1.0"

                    android:gravity="right"/>
                <TextView
                    android:id="@+id/tv_subtotal_50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0000"
                    android:layout_weight="1.0"
                    android:gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gris">
                <TextView
                    android:id="@+id/tv_total_texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monto_sangria_texto"
                    android:gravity="right"
                    android:layout_weight="2.0"/>
                <TextView
                    android:id="@+id/tv_total_monto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="$ 000000"
                    android:gravity="right"
                    android:layout_weight="1.0"/>

            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_calcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="calcular"
                    android:layout_weight="1.0dp"/>

                <Button
                    android:id="@+id/btn_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="guardar"
                    android:layout_weight="1.0dp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
    
</LinearLayout>